--- a/src/KindleSender.Service/App.config
+++ b/src/KindleSender.Service/App.config
@@ -11,5 +11,8 @@
     <add key="SmtpServer" value="" />
     <add key="SmtpUserName" value="" />
     <add key="SmtpPassword" value="" />
+    <add key="log4net.Config" value="log4net.config"/>
+    <add key="log4net.Config.Watch" value="True"/>
+    <add key="log4net.Internal.Debug" value="True"/>
   </appSettings>
 </configuration>
